more updates swagger and routes
